# pdf-parser

./: .gitignore  CLAUDE.md  OpenDataLoader.ipynb  README.md  api.py  api.service.example  dots-ocr-cpu.ipynb  dots_ocr_parser.ipynb  jupyter.service.example  mcp_server.py  nohup.out  ocr_visualizer.ipynb  pdf_parser_api.ipynb  pdf_parser_docling.ipynb  pdf_parser_ibm_api.ipynb  pyproject.toml  run.py  run_s3.py  setting.md  summarizer.py
docs/: sampe_drink.xlsx  sample_rag.docx
dots-ocr-server/: Dockerfile  docker-compose.yml  server.py
dots_ocr_deploy/: dots_ocr_parser.ipynb  requirements.txt  setup.sh
office_parser/: __init__.py  parser.py  types.py  worker.py
pdf_parser/: __init__.py  ibm_converter.py  markdown_builder.py  s3_browser.py  table_merger.py  utils.py
src/: converter.py  markdown_builder.py  s3_browser.py  s3_handler.py  summarizer.py
