[project]
name = "pdf-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "docling>=2.76.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "opencv-python>=4.8.0",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "streamlit>=1.40.0",
    "strands-agents>=1.28.0",
    "tabulate>=0.9.0",
    "jupyterlab>=4.5.5",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "ipywidgets",
]
