[project]
name = "doc-parser"
version = "0.2.0"
description = "PDF + Office document parser with AI summarization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    # PDF parser (Docling)
    "docling>=2.76.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "opencv-python>=4.8.0",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "streamlit>=1.40.0",
    "strands-agents>=1.28.0",
    "tabulate>=0.9.0",
    "jupyterlab>=4.5.5",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "ipywidgets",
    # Office parser
    "python-docx>=0.8.11",
    "openpyxl>=3.0.0",
    "python-pptx>=0.6.21",
    "pdfplumber>=0.10.0",
    "striprtf>=0.0.26",
    "pytesseract>=0.3.10",
    "boto3>=1.28.0",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.2.2",
    # MCP server
    "fastmcp>=2.0.0",
]