[project]
name = "doc-parser"
version = "0.2.0"
description = "PDF + Office document parser with AI summarization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    # PDF parser (Docling)
    "docling>=2.76.0",
    "opencv-python>=4.8.0",
    "pillow>=12.1.1",
    "pymupdf>=1.24.0",
    # Office parser
    "python-docx>=0.8.11",
    "openpyxl>=3.0.0",
    "python-pptx>=0.6.21",
    "pdfplumber>=0.10.0",
    "striprtf>=0.0.26",
    # API server
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    # MCP server
    "fastmcp>=2.0.0",
    "python-dotenv>=1.2.2",
    # Jupyter
    "jupyterlab>=4.5.5",
    "ipykernel>=7.2.0",
    "ipywidgets",
]
